--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.5.2",
     "sass": "^1.63.6",
     "typescript": "^4.9.5",
@@ -45,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.2"
+    "@types/uuid": "^9.0.2",
+    "react-scripts": "^5.0.1"
   }
 }
